fix: add text align for radiobuttons

--- a/blocks/donation-form/__custom-radio/donation-form__custom-radio.css
+++ b/blocks/donation-form/__custom-radio/donation-form__custom-radio.css
@@ -10,6 +10,7 @@
   justify-content: center;
   padding: 5px 10px;
   position: relative;
+  text-align: center;
 }
 
 .donation-form__radio:checked + .donation-form__custom-radio {
